deploy-svc-time.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-time
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: time
  ports:
  - port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: time
  name: time-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: time
  template:
    metadata:
      labels:
        app: time
    spec:
      containers:
      - name: time-container
        image: 058264152241.dkr.ecr.ap-northeast-2.amazonaws.com/juju:v1
        ports:
        - containerPort: 8080
