argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # ACM에서 *.eunae.store의 ARN 주소
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:058264152241:certificate/6b00ab6b-c7c2-456c-86be-dcca0a0ab3a1
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ingressClassName: alb
  rules:
  - host: argocd.eunae.store
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-svc #argocd용 서비스 명 
            port: 
              number: 80
